[package]
name = "max2870gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Зависимости для разработки под процессор Cortex-M3
[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"

# Пакет для разработки под отладочные платы stm32f1
[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["stm32f103", "rt"]

# Позволяет использовать `cargo fix`!
[[bin]]
name = "max2870gen"
test = false
bench = false

# Включение оптимизации кода
[profile.release]
codegen-units = 1 # Лучшая оптимизация
debug = true # Нормальные символы, не увеличивающие размер на Flash памяти
lto = true # Лучшая оптимизация
opt-level = "z"
